# social-app-django-mongoengine

./: .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pre-commit.yml  release.yml
social_django_mongoengine/: config.py  models.py
