[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=78.0.2"]

[project]
authors = [
  {email = "matiasaguirre@gmail.com", name = "Matias Aguirre"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python",
  "Topic :: Internet"
]
dependencies = [
  "django-mongoengine>= 0.3.3",
  "social-auth-app-django >= 1.0.0",
  "social-auth-storage-mongoengine >= 1.0.0"
]
description = "Python Social Authentication, Mongoengine Django integration."
dynamic = ["version"]
keywords = [
  "auth",
  "django",
  "mongoengine",
  "social"
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
name = "social-auth-app-django-mongoengine"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/python-social-auth/social-app-django-mongoengine"

[tool.setuptools]
include-package-data = false
packages = [
  "social_django_mongoengine"
]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "social_django_mongoengine.__version__"}

[tool.tomlsort]
ignore_case = true
sort_inline_arrays = true
sort_inline_tables = true
sort_table_keys = true
spaces_before_inline_comment = 2
